# EmergencyDetectionApp

./: Dockerfile  main.py  pyproject.toml  tester.py
