[project]
name = "EmergencyDetectionApp"
version = "0.1.0"
description = "FastAPI hosting Speech Verification and ASR Models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.116.1",
    "faster-whisper>=1.1.1",
    "soundfile>=0.13.1",
    "speechbrain>=1.0.3",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
